force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <description>This is the field created from Custom Metadata</description>
    <label>Courses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Development</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>