force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This is the picklist field created from Custom Metadata while recording UDEMY INTEGRATION</description>
    <inlineHelpText>This is the picklist field created from Custom Metadata while recording UDEMY INTEGRATION</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>